[package]
name = "ForgeLSP"
version = "0.1.1"
edition = "2024"

[dependencies]
tokio = { version = "1", features = [
  "macros",
  "rt-multi-thread",
  "io-std",
  "sync",
  "fs",
] }
ignore = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-lsp = "0.20"
notify = { version = "6", features = ["macos_fsevent"] }
dirs = "5"
forge-kit = { git = "https://github.com/edexlabs/ForgeKit", features = [
  "validation",
] }

[profile.release]
opt-level = 3
lto = true        # Enable link-time optimization
codegen-units = 1
strip = true
